1，修改计数items的逻辑